# photo-tag-app

./: .gitignore  README.md  railway.toml  test_photo_tagging.py
.agents/tasks/task-location-detection/: 2026-06-12-230000-review.md  context.json  task.json
.agents/tasks/task-location-detection/features/: FEAT-001.json
.agents/tasks/task-photo-tagger-app/: 2026-06-12-154408-review.md  context.json  task.json
.agents/tasks/task-photo-tagger-app/features/: FEAT-001.json  FEAT-002.json  FEAT-003.json
.agents/tasks/task-test-tagging-page/: context.json  task.json
.agents/tasks/task-test-tagging-page/features/: FEAT-001.json
backend/: .dockerignore  .gitignore  Dockerfile  pyproject.toml
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/api/: dependencies.py
backend/app/api/routes/: photos.py  tags.py
backend/app/models/: __init__.py  photo.py
backend/app/schemas/: __init__.py  photo.py
backend/app/services/: __init__.py  photo_service.py
backend/app/services/analysis/: __init__.py  base.py  face_analyzer.py  location_analyzer.py  object_analyzer.py  pipeline.py  scene_analyzer.py
backend/static/: test.html
backend/tests/: __init__.py  conftest.py  test_api.py  test_integration.py  test_models.py
frontend/: package.json  pnpm-lock.yaml
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: FilterPanel.tsx  PhotoCard.tsx  PhotoDetail.tsx  PhotoGrid.tsx  UploadModal.tsx
frontend/src/lib/: api.ts  types.ts
